--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,15 +1,22 @@
-nav {
+nav ul {
+  background: #007bff;
+  padding: 10px 0px;
   display: flex;
   justify-content: center;
-  background: #007bff;
-  padding: 10px;
 }
-nav a {
+nav ul li{
+  list-style: none;
+}
+nav ul li a {
   color: white;
   text-decoration: none;
   margin: 0 15px;
   font-size: 18px;
+  padding: 5px 10px;
 }
-nav a:hover {
-  text-decoration: underline;
+nav ul li a:hover {
+  cursor: pointer;
+}
+nav ul li a.active {
+  border-bottom: 2px solid white;
 }
