--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,10 @@
+
+
 <nav>
-  <a routerLink="/about">About</a>
-  <a routerLink="/contact">Contact</a>
+  <ul>
+    <li><a routerLink="/about" routerLinkActive="active" ariaCurrentWhenActive="page">About Us</a></li>
+    <li><a routerLink="/contact" routerLinkActive="active" ariaCurrentWhenActive="page">Contact</a></li>
+  </ul>
 </nav>
 
 <router-outlet></router-outlet>
